# Pronostic

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: dbmanager.h  league.h  mainwindow.h  match.h  newleaguewindow.h  singleton.h  team.h
include/widgets/: addleaguewidget.h  addmatchwidget.h  addteamwidget.h  editleaguewidget.h  editmatchwidget.h  editteamwidget.h
resource/: Matchs.txt  pronostic.sqlite
scripts/: checkAllMatchsSavedByLeague.py  testLeague.py  testMatch.py  testTeam.py
src/: CMakeLists.txt  dbmanager.cpp  league.cpp  main.cpp  mainwindow.cpp  match.cpp  newleaguewindow.cpp  newmatchwindow.cpp  newteamwindow.cpp  singleton.cpp  team.cpp
src/widgets/: addleaguewidget.cpp  addmatchwidget.cpp  addteamwidget.cpp  editleaguewidget.cpp  editmatchwidget.cpp  editteamwidget.cpp
